Review access change
Change-Id: I803030bc0453cbcfc0a55d87a950fe4134a1f0ad

--- a/project.config
+++ b/project.config
@@ -2,3 +2,5 @@
 	inheritFrom = Public-Plugins
 [project]
 	description = This plugin reports Gerrit metrics to AWS Cloudwatch Service.
+[access "refs/*"]
+	owner = group plugins-metrics-reporter-cloudwatch
